--- a/StringMatching/StringMatching/StringMatching.csproj
+++ b/StringMatching/StringMatching/StringMatching.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="StringDiff.cs" />
     <Compile Include="StringMatcher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
