--- a/StringMatching/TestProject/TestProject.csproj
+++ b/StringMatching/TestProject/TestProject.csproj
@@ -46,8 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="PatternMatchingTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringDiffTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\StringMatching\StringMatching.csproj">
